src/main/java/com/example/travel_itinerary_backend2/error/ResourceNotFoundException.java
package com.example.travel_itinerary_backend2.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
